--- a/client/main.css
+++ b/client/main.css
@@ -1,7 +1,3 @@
-#markdown-editor {
-  min-height: 240px;;
-}
-
 .text-right {
   text-align: right;
 }
@@ -17,6 +13,7 @@
 }
 
 .CodeMirror {
-  min-height: 240px;
+  min-height: 320px;
   height: auto;
+  margin-bottom: 10px;
 }
