safe and use loading

--- a/client/templates/post.html
+++ b/client/templates/post.html
@@ -32,7 +32,7 @@
 </template>
 
 <template name="post">
-  {{title}}
-  {{{text_html}}}
+  <h1>{{title}}</h1>
+  <article>{{{text_html}}}</article>
 </template>
 
