--- a/client/templates/user.html
+++ b/client/templates/user.html
@@ -1,7 +1,9 @@
 <template name="user">
-  <ul>
-  {{#each posts}}
-    {{> postList}}
-  {{/each}}
-  </ul>
+  <section class="container" id="user">
+    <ul>
+    {{#each posts}}
+      {{> postList}}
+    {{/each}}
+    </ul>
+  </section>
 </template>
