--- a/client/templates/auth.html
+++ b/client/templates/auth.html
@@ -1,15 +1,25 @@
 <template name="auth">
+  <ul class="navigation-list float-right">
   {{#unless currentUser}}
     {{#if loginConfigured}}
-    <a class="button button-github">
-      <i class="icon-github"></i> Login with GitHub
-    </a>
+    <li class="navigation-item">
+      <a class="button button-github">
+        <i class="icon-github"></i> Login with GitHub
+      </a>
+    </li>
     {{/if}}
   {{else}}
-  <a class="button" href="{{urlFor route='post.new'}}"><i class="icon-code"></i> New Post</a>
-    <a class="button button-clear button-logout">Logout</a>
-    <a href="/{{username}}">
-      {{> avatar userId=currentUser._id shape="rounded" class="float-right"}}
-    </a>
+    <li class="navigation-item">
+      <a class="navigation-link button" href="{{urlFor route='post.new'}}"><i class="icon-code"></i> New Post</a>
+    </li>
+    <li class="navigation-item">
+      <a class="navigation-link button-logout">Logout</a>
+    </li>
+    <li class="navigation-item">
+      <a href="/{{username}}">
+        {{> avatar userId=currentUser._id shape="rounded" class="float-right"}}
+      </a>
+    </li>
   {{/unless}}
+  </ul>
 </template>
