--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,7 +1,7 @@
 <template name="home">
-  <div class="home container">
+  <section class="container" id="home">
     {{#each posts}}
       {{> postList}}
     {{/each}}
-  </div>
+  </section>
 </template>
