use subscription manager

--- a/client/templates/auth.html
+++ b/client/templates/auth.html
@@ -13,7 +13,7 @@
       <a class="navigation-link button" href="{{urlFor route='post.new'}}"><i class="icon-code"></i> New Post</a>
     </li>
     <li class="navigation-item">
-      <a class="navigation-link button-logout">Logout</a>
+      <a class="navigation-link button-logout action-link">Logout</a>
     </li>
     <li class="navigation-item">
       <a href="/{{username}}">
