--- a/client/templates/post.html
+++ b/client/templates/post.html
@@ -36,7 +36,7 @@
 <template name="post">
   <section class="container" id="article">
     <h1>{{title}}</h1>
-    <article>{{{text_html}}}</article>
+    <article>{{{contentHtml}}}</article>
   </section>
 </template>
 
