use spinkit for loading

--- a/client/templates/loading.html
+++ b/client/templates/loading.html
@@ -1,3 +1,10 @@
 <template name="loading">
-  LOADING...
+  {{> spinner}}
+</template>
+
+<template name="spinner">
+  <div class="spinner">
+    <div class="double-bounce1"></div>
+    <div class="double-bounce2"></div>
+  </div>
 </template>
