updated naming and cleanup

--- a/client/templates/auth.html
+++ b/client/templates/auth.html
@@ -1,6 +1,6 @@
 <template name="auth">
   {{#unless currentUser}}
-    <ul class="inline-list">
+    <ul class="navigation-list inline-list float-right">
       <li><a class="button button-github"><i class="icon-github"></i> Login with GitHub</a></li>
     </ul>
   {{else}}
