--- a/client/templates/post.html
+++ b/client/templates/post.html
@@ -23,7 +23,7 @@
     <div class="column column-50">
       <form class="new-post">
         <input type="text" name="title">
-        <textarea id="markdown-editor" name="description"></textarea>
+        <textarea id="markdown-editor" name="content"></textarea>
         <input type="submit" class="button" value="Save">
       </form>
     </div>
