--- a/client/main.css
+++ b/client/main.css
@@ -1,48 +1,3 @@
-/** common styles **/
-img {
-  max-width: 100%;
-}
-
-.action-link {
-  cursor: pointer;
-}
-
-.inline-list li {
-  display: inline;
-  list-style: none;
-}
-
-.navigation {
-  background: #f4f5f6;
-  border-bottom: .1rem solid #d1d1d1;
-  padding-top: 1rem;
-  height: 6.8rem;
-  margin-bottom: 20px;
-}
-
-.navigation .navigation-list {
-  padding-top: 0.6rem;
-}
-
-.avatar {
-  float: right !important;
-  margin-left: 5px !important;
-}
-
-.site-title {
-  color: #606c76;
-  display: inline;
-  line-height: 5.2rem;
-  padding: 0;
-  position: relative;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-.site-title h1 {
-  font-size: 4rem;
-}
-
 /** vendor overrides **/
 .sweet-alert button {
   padding-top: 0px;
@@ -50,8 +5,22 @@ img {
 }
 
 .CodeMirror {
-  min-height: 320px;
+  min-height: 200px;
   height: auto;
   margin-bottom: 10px;
 }
 
+/** custom styles **/
+pre {
+  background: #f4f5f6;
+  border-left: 0.3rem solid #9b4dca;
+  margin-bottom: 15px;
+}
+
+pre > code {
+  background: transparent;
+  border-radius: 0;
+  display: block;
+  padding: .5rem 1.5rem;
+  white-space: pre;
+}
