responsive design and updated font

--- a/client/templates/auth.html
+++ b/client/templates/auth.html
@@ -1,5 +1,5 @@
 <template name="auth">
-  <div class="large-8 columns">
+  <div class="small-8 columns">
     {{#unless currentUser}}
       <ul class="menu user-menu">
         <li><a class="button button-github"><i class="icon-github"></i> Login with GitHub</a></li>
