--- a/client/templates/navigation.html
+++ b/client/templates/navigation.html
@@ -1,7 +1,7 @@
 <template name="navigation">
-  <nav class="main-navigation show-for-medium">
+  <nav class="main-navigation">
     <div class="row">
-      <div class="large-4 columns">
+      <div class="small-4 columns">
         <ul class="menu">
           <li class="site-title"><a href="/">Kodepot</a></li>
         </ul>
