--- a/client/templates/auth.html
+++ b/client/templates/auth.html
@@ -1,7 +1,7 @@
 <template name="auth">
   <div class="small-8 columns">
     {{#unless currentUser}}
-      <ul class="menu user-menu">
+      <ul class="menu user-menu align-right">
         <li><a class="button button-github"><i class="icon-github"></i> Login with GitHub</a></li>
       </ul>
     {{else}}
