--- a/client/templates/navigation.css
+++ b/client/templates/navigation.css
@@ -6,5 +6,12 @@
 }
 
 .main-navigation .site-title {
+  padding-left: 0px;
+}
+
+.main-navigation .site-title h1 {
+  font-size: 1.4rem;
   text-transform: uppercase;
+  padding-top: .1rem;
+  padding-bottom: 0;
 }
