--- a/client/main.css
+++ b/client/main.css
@@ -25,8 +25,16 @@ pre > code {
   white-space: pre;
 }
 
-hr.separator {
-  width: 50%;
+hr {
+  width: 75%;
   border: none;
   border-bottom: dotted 1px #d1d1d1;
+}
+
+hr.separator {
+  width: 50%;
+}
+
+.help-text.alert {
+  color: #ec5840;
 }
