--- a/client/templates/post.html
+++ b/client/templates/post.html
@@ -33,7 +33,7 @@
       <header class="post-header text-center">
         <h1>{{title}}</h1>
         <section class="post-metadata">
-          <h6 class="subheader">{{formatDate createdAt}}</h6>
+          <h6 class="subheader">{{formatDate createdAt}} | {{postTags}}</h6>
         </section>
       </header>
       <hr class="separator">
