--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,6 +1,6 @@
 <template name="home">
   <div class="row" id="home">
-    <div class="large-8 large-offset-2 columns">
+    <div class="small-12 medium-10 medium-centered large-8 large-centered columns">
       <table class="hover">
         <tbody>
         {{#each posts}}
