--- a/client/templates/navigation.html
+++ b/client/templates/navigation.html
@@ -1,7 +1,7 @@
 <template name="navigation">
   <nav class="main-navigation">
     <div class="row">
-      <div class="small-12 large-8 large-offset-2 columns">
+      <div class="columns">
         <div class="small-4 columns site-title">
           <h1><a href="/">Kodepot</a></h1>
         </div>
