--- a/client/templates/post.html
+++ b/client/templates/post.html
@@ -29,7 +29,7 @@
 
 <template name="post">
   <section class="row" id="article">
-    <div class="large-8 large-offset-2 columns">
+    <div class="small-12 medium-10 medium-centered large-8 large-centered columns">
       <header class="post-header text-center">
         <h1>{{title}}</h1>
         <section class="post-metadata">
