--- a/client/templates/head.html
+++ b/client/templates/head.html
@@ -1,4 +1,5 @@
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <script src="https://use.typekit.net/cqs6aoj.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
